[gd_scene load_steps=8 format=3 uid="uid://sp248oelfwpr"]

[ext_resource type="Script" path="res://card/card_states/Card.gd" id="1_g1pwu"]
[ext_resource type="Texture2D" uid="uid://dbx0x8sbifulo" path="res://assets/card_images/passion/Gorilla.png" id="2_ghlii"]
[ext_resource type="LabelSettings" uid="uid://dq5kctg5dkitl" path="res://styling/labels/PassionLabel.tres" id="3_f00tt"]
[ext_resource type="LabelSettings" uid="uid://nx6f46ywtswa" path="res://styling/labels/ImaginationLabel.tres" id="4_tgrbq"]
[ext_resource type="LabelSettings" uid="uid://ihox33scd0t8" path="res://styling/labels/GrowthLabel.tres" id="5_0it5u"]
[ext_resource type="LabelSettings" uid="uid://bpbd72h7s4e60" path="res://styling/labels/LogicLabel.tres" id="6_hpr73"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ys6ov"]
bg_color = Color(0.741385, 0.741385, 0.741384, 1)

[node name="Card" type="PanelContainer"]
custom_minimum_size = Vector2(200, 200)
script = ExtResource("1_g1pwu")

[node name="CardImage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_ghlii")
expand_mode = 3

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="TopInfo" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
mouse_filter = 2

[node name="CardNameBG" type="Panel" parent="VBox/TopInfo"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 2

[node name="CardName" type="Label" parent="VBox/TopInfo/CardNameBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 31.0
grow_horizontal = 2
grow_vertical = 2
text = "Animal"

[node name="Costs" type="Panel" parent="VBox/TopInfo"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ys6ov")

[node name="CostLabels" type="HBoxContainer" parent="VBox/TopInfo/Costs"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Passion" type="Label" parent="VBox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("3_f00tt")

[node name="Imagination" type="Label" parent="VBox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("4_tgrbq")

[node name="Growth" type="Label" parent="VBox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("5_0it5u")

[node name="Logic" type="Label" parent="VBox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("6_hpr73")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
